@@ -1,6 +1,6 @@
-Date: 2022-02-08
+Date: 2022-02-11
 Package: CHNOSZ
-Version: 1.4.2
+Version: 1.4.2-1
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
