@@ -45,3 +45,9 @@ don't have to compile anything to install CHNOSZ updates).
 
 - Add a 'model' column to thermo()$OBIGT to indicate the thermodynamic data
   model (e.g. H2O, HKF, CGL, Berman, AD, or DEW)
+
+[20220209]
+
+- Add units = c(T.units, P.units, E.units) to output of subcrt()
+
+- Add units = c(T.units, P.units) to output of affinity()
